# libweave

./: Cargo.toml  README.md
src/: embedding.rs  embeddings.rs  ext.rs  ffi.rs  lib.rs  weave.rs
src/embeddings/: failure_pruning.rs  mod.rs  pattern_matching.rs
