[package]
name = "libweave"
version = "0.1.0"
edition = "2021"

authors = ["Miroslav Gavrilov"]
description = "Weave: structured programming"
license = "MIT"
homepage = "https://github.com/gavrilovmiroslav/weave"
repository = "https://github.com/gavrilovmiroslav/weave"
readme = "README.md"

[lib]
crate-type = [
    "staticlib",
    "lib",
]

[dependencies]
array_tool = "1.0.3"
itertools = "0.14.0"
multimap = "0.10.0"
ordered-multimap = "0.7.3"
id-arena = { version = "2", features = [] }